<resources>
    <string name="app_name">Harry Potter Cluedo</string>
    <string name="game_start">Játék indítása</string>
    <string name="rules">Szabályok</string>
    <string name="game_rules">Játékszabályok</string>
    <string name="exit">Kilépés</string>
    <string name="dob">Dobás</string>
    <string name="start">Start</string>
    <string name="ok">OK</string>
    <string name="go_forward">Tovább</string>
    <string name="back_to_menu">Vissza a főmenübe</string>
    <string name="cancel">Mégse</string>
    <string name="yes">Igen</string>
    <string name="star1">Star1</string>
    <string name="star2">Star2</string>
    <string name="star3">Star3</string>
    <string name="star4">Star4</string>
    <string name="star5">Star5</string>
    <string name="star6">Star6</string>
    <string name="star7">Star7</string>
    <string name="star8">Star8</string>
    <string name="player1">Ginny Weasley</string>
    <string name="player2">Harry Potter</string>
    <string name="player3">Hermione Granger</string>
    <string name="player4">Ron Weasley</string>
    <string name="player5">Luna Lovegood</string>
    <string name="player6">Neville Longbottom</string>
    <string name="choose_a_character">Válassz karaktert magadnak!</string>
    <string name="dobj">Dobj a kockákkal!</string>
    <string name="dialog_character_title">Válaszd ki a karaktered</string>
    <string name="got_helper_card">Mentő kártyát kaptál</string>
    <string name="sotet_jegy">A sötét jegy feltűnt az égen!</string>
    <string name="helper_cards_tools">Eszközeid</string>
    <string name="helper_cards_spells">Varázsigéid</string>
    <string name="helper_cards_allys">Szövetségeseid</string>
    <string name="tool_loss">El kell dobnod egy eszköz kártyát!</string>
    <string name="spell_loss">El kell dobnod egy varázsige kártyát!</string>
    <string name="ally_loss">El kell dobnod egy szövetséges kártyát!</string>
    <string name="throw_card">Eldobás</string>
    <string name="mystery_cards">Rejtélykártyák sorsolása</string>
    <string name="your_mystery_cards">A te rejtély kártyáid: </string>
    <string name="slide_for_more">Lapozz oldalra a többiért!</string>
    <string name="game_mode">Válaszd ki a játék paramétereit!</string>
    <string name="player_mode">Játékos mód: </string>
    <string name="player_count">Játékosok száma: </string>
    <string name="player_id">Player ID</string>
    <string name="player_id_key">player_id</string>
    <string name="first_start_pref">FirstStart</string>
    <string name="game_params_pref">Game params</string>
    <string name="player_data_pref">PLAYER DATA</string>
    <string name="player_name_key">player_name</string>
    <string name="password_key">password</string>
    <string name="player_count_key">player_count</string>
    <string name="play_mode_key">play_mode</string>
    <string name="channel_id_key">channel_id</string>
    <string name="is_host_key">is_host</string>
    <string name="database_name">CluedoDatabase</string>
    <string name="card_tool">Mystery card tool</string>
    <string name="card_suspect">Mystery card suspect</string>
    <string name="card_venue">Mystery card venue</string>
    <string name="card_character">Character card</string>
    <string name="card_dark">Dark card</string>
    <string name="card_helper">Helper card</string>
    <string name="dice1">Dice 1</string>
    <string name="dice2">Dice 2</string>
    <string name="dice3">Dice3</string>
    <string name="incrimination">Gyanúsítás</string>
    <string name="accusation">Vádemelés</string>
    <string name="tool">Eszköz</string>
    <string name="suspect">Gyanúsított</string>
    <string name="mystery_card">Rejtély kártya</string>
    <string name="card_reveal">Rejtélykártya felfedése</string>
    <string name="correct_accusation">Helyes vád</string>
    <string name="incorrect_accusation">Helytelen vád</string>
    <string name="show_card">Fedd fel az egyik kártyádat!</string>
    <string name="show">Felfed</string>
    <string name="skip">Passz</string>
    <string name="room">Helyiség</string>
    <string name="lucius_malfoy">Lucius Malfoy</string>
    <string name="peter_pettigrew">Peter Pettigrew</string>
    <string name="draco_malfoy">Draco Malfoy</string>
    <string name="dolores_umbridge">Dolores Umbridge</string>
    <string name="crak_es_monstro">Crak és Monstro</string>
    <string name="bellatrix_lestrange">Bellatrix Lestrange</string>
    <string name="zsupszkulcs">Zsupszkulcs</string>
    <string name="volt_nincs_szekreny">Volt-nincs szekrény</string>
    <string name="petrificus_totalus">Petrificus Totalus</string>
    <string name="obstructo">Obstructo</string>
    <string name="mandragora">Mandragóra</string>
    <string name="altatoital">Altatóital</string>
    <string name="take_note">Jegyezd fel a történteket!</string>
    <string name="purpose_in_room">Mi a célod Dumbledore irodájában?</string>
    <string name="choose_option">Válassz egy lehetőséget!</string>
    <string name="check_cards">Kártyák megtekintése</string>
    <string name="step">Lépek</string>
    <string name="unused_cards">Ki nem osztott rejtélykártyák</string>
    <string name="are_you_sure">Biztosan ki akarsz lépni a játékból?</string>
    <string name="you_died">Meghaltál!</string>
    <string name="you_lost_your_hps">Elvesztetted házpontjaidat, kiestél.</string>
    <string name="game_over">A játéknak vége.</string>
    <string name="he_lost_his_hps">elvesztette házpontjait, kiesett</string>
    <string name="he_lost_the_game">Kiesett a játékból.</string>
    <string name="left_the_game">kilépett a játékból</string>
    <string name="his_mystery_cards">Rejtély kártyái ezek voltak:</string>
    <string name="someone_solved_the_mystery">megoldotta a rejtélyt.</string>
    <string name="wrong_solution">rossz megoldást adott.</string>
    <string name="wrong_solution_self_message">Rossz megoldást adtál, kiestél.</string>
    <string name="good_solution_self_message">Megoldottad a rejtélyt!</string>
    <string name="make_a_movement">Lépj!</string>
    <string name="dice_rolling">Kockadobás</string>
    <string name="your_options">Lehetőségek</string>
    <string name="you_have_to_step">Muszáj lépned!</string>
    <string name="some_one_incriminates"> gyanúsít</string>
    <string name="in_this_room">Ebben a helyiségben: </string>
    <string name="with_this_tool">Ezzel az eszközzel: </string>
    <string name="suspect_person">Gyanúsított: </string>
    <string name="you_have_to_incriminate">Muszáj gyanúsítanod!</string>
    <string name="incrimination_params">Gyanúsítás paraméterei: </string>
    <string name="current_room">Helyiség: </string>
    <string name="current_tool">Eszköz: </string>
    <string name="make_your_accusation">Add le a gyanúdat!</string>
    <string name="player_arrived">Játékos érkezett! Még %1$d játékosra várunk.</string>
    <string name="all_players_arrived">Mindenki megérkezett!</string>
    <string name="player_left">Egy játékos kilépett</string>
    <string name="dark_card1">Különös csomagot kapsz: a tartalmát megátkozták.</string>
    <string name="dark_card2">Valaki megmérgezte a Vajsörödet… nem érzed jól magad.</string>
    <string name="dark_card3">Kővé dermesztettek.</string>
    <string name="dark_card4">Miközben elhaladsz az udvari szökőkút mellett, a kiemelkedő vízoszlop foglyul ejt és nem kapsz levegőt.</string>
    <string name="dark_card5">Egy Mumus annak a képében közeledik, amitől a legjobban félsz…</string>
    <string name="dark_card6">A klubhelyiségbe nem tudsz bemenni.</string>
    <string name="dark_card7">Kábító átok fog sújtani hamarosan.</string>
    <string name="dark_card8">Egy bébi Mandragórát találsz a táskádban - és éppen felébredt. Nincs rajtad fülvédő.</string>
    <string name="dark_card9">Befordulsz a sarkon és egyenesen egy Ördöghurok bozótba esel.</string>
    <string name="dark_card10">Valaki a közelben Önoltót használt, sötétben tapogatózol.</string>
    <string name="dark_card11">Az édességedet Rókázó Rágcsára cserélték - és későn vetted észre.</string>
    <string name="dark_card12">A kviddicsmérkőzés alatt megátkozzák a seprűd.</string>
    <string name="dark_card13">Sürgős üzenetet kellene kézbesítened, de a baglyod eltűnt.</string>
    <string name="dark_card14">Valaki beletett valamit az üstödbe; a füsttől kába leszel.</string>
    <string name="dark_card15">A Bogoly Berti féle Drazsét megbabrálták. Nagyon lebetegedsz.</string>
    <string name="dark_card16">A tea levelek a Zordót mutatják. Pánikba esel.</string>
    <string name="dark_card17">Lépéseket hallasz, miközben a Zárolt Részben leemelsz egy könyvet.</string>
    <string name="dark_card18">A Párbajszakkör alatt a Mardekáros ellenfeled egy kígyót varázsol…</string>
    <string name="dark_card19">Felkapsz egy serleget, de későn veszed észre, hogy az egy Zsupszkulcs.</string>
    <string name="dark_card20">Kelta Tündérmanók egy ártalmas csoportja tart feléd.</string>
    <string name="dark_card21">Egy fal összeomlását hangos robaj kíséri. Valaki közeleg.</string>
    <string name="dark_card22">Dumbledore elhagyta a kastélyt, pedig információd van a Halálfalókról.</string>
    <string name="dark_card23">Egyik elvarázsolt osztálytársad egy Főbenjáró Átkot készül rád szórni.</string>
    <string name="dark_card24">A kastélyban elszabadult kis sárkány meglát és tüzet okád rád.</string>
    <string name="dark_card25">Draco Malfoy és barátai kelepcébe csalnak, hogy párbajt kezdhessetek.</string>
    <string name="dark_card26">Dementorok szállták meg az iskolát.</string>
    <string name="dark_card27">Valaki levette a csatot a Szörnyek Szörnyű Könyvéről és az megtámad.</string>
    <string name="dark_card28">Egy ismert vérfarkas zsákmányt keres a termekben… telihold van.</string>
    <string name="dark_card29">A kastélyban szabadon kószáló, kifejlett hegyi trollal találkozol.</string>
    <string name="dark_card30">Halálfaló Lucius Malfoy meglátogatja a fiát, Dracot.</string>
    <string name="dark_card31">Frics úr - a szokásosnál is gorombább hangulatban - befordul a sarkon.</string>
    <string name="dark_card32">A Griffendéles fiúk hálótermét kifosztották. Értékes dolgok tűntek el.</string>
    <string name="dark_card33">Cormac McLaggen szerelmi bájitallal átitatott édességet evett - és csak rád tud gondolni.</string>
    <string name="single_player">Egyjátékos mód</string>
    <string name="multi_player">Többjátékos mód</string>
    <string name="game_logo">Game logo</string>
    <string name="incrimination_rules">A gyanúsítás szabályai</string>
    <string name="incrimination_rules_description1">Ha te gyanúsítasz, ki kell választanod a szoba mellé a gyanúsított személyt, és az eszközt, amivel szerinted elkövette a bűntettet. Ha ezek megvannak, a \"Gyanúsítás\" gombra tapintva leadhatod a gyanúdat. Adott esetben (ha szobából kezded a körödet) úgy is dönthetsz, hogy mégsem gyanúsítasz, hanem inkább lépsz: erre való a \"Passz\" gomb.</string>
    <string name="incrimination_rules_description2">A három szimbólum közül a nem fekete-fehér színű ikon jelzi számodra, hogy mit mutatott a másik játékos (akinek kilétét a jobboldali kép jelzi).</string>
    <string name="incrimination_rules_description3">Ha épp más játékosok körei vannak, azt is megfigyelheted. Ekkor csak találgatni tudsz, hogy a három közül melyik kártyát mutatta a másik fél a harmadiknak, de épp erre való a jegyzettömb.</string>
    <string name="incrimination_rules_description4">Amikor rajtad a sor, hogy mutass valamit a kártyáid közül, felhívja erre a figyelmedet egy felirat, és a színes ikonok közül tudsz választani (ugyanis ezekkel rendelkezel), hogy melyiket mutatod meg.</string>
    <string name="incrimination_rules_description5">Végezetül pedig az is előfordulhat, hogy senki nem tudott mutatni lapot. Ezt az alábbi kép ábrázolja. Ekkor is lehet több dologra következtetni.</string>
</resources>