<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="diceRollerViewModel"
            type="neptun.jxy1vz.hp_cluedo.ui.fragment.dice_roller.DiceRollerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/semi_transparent_background">

        <ImageView
            android:id="@+id/ivDice1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/dice1"
            app:layout_constraintEnd_toStartOf="@+id/guidelineFirst"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnRoll" />

        <ImageView
            android:id="@+id/ivDice2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/dice2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guidelineSecond"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnRoll" />

        <ImageView
            android:id="@+id/ivDice3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/dice3"
            app:layout_constraintStart_toStartOf="@id/guidelineFirst"
            app:layout_constraintEnd_toEndOf="@id/guidelineSecond"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnRoll"/>

        <Button
            android:id="@+id/btnRoll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:onClick="@{()->diceRollerViewModel.rollDice()}"
            android:text="@string/dob"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@id/btnSubmit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="@{()->diceRollerViewModel.finish()}"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineFirst"
            app:layout_constraintGuide_percent="0.33"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineSecond"
            app:layout_constraintGuide_percent="0.66"
            android:orientation="vertical"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>