<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="dialogViewModel"
            type="neptun.jxy1vz.cluedo.ui.dialog.dice.DiceRollerViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <ImageView
                android:id="@+id/ivDice1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/dice1"
                app:layout_constraintEnd_toStartOf="@+id/ivDice3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.3"
                android:contentDescription="@string/dice1" />

            <ImageView
                android:id="@+id/ivDice2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/dice2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivDice3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.3"
                android:contentDescription="@string/dice2" />

            <ImageView
                android:id="@+id/ivDice3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/helper_card"
                app:layout_constraintEnd_toStartOf="@id/ivDice2"
                app:layout_constraintStart_toEndOf="@id/ivDice1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.3"
                android:contentDescription="@string/dice3" />

            <Button
                android:id="@+id/btnRoll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:onClick="@{()->dialogViewModel.rollDice()}"
                android:text="@string/dob"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivDice3" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>