<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/incriminationRulesRoot">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitle"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/incrimination_rules"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvDescription1"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:text="@string/incrimination_rules_description1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            android:layout_marginTop="5dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/ivIllustration1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescription1"
            android:layout_margin="5dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/ivIllustration1_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescription1"
            android:layout_margin="5dp"
            android:visibility="gone"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvDescription2"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:text="@string/incrimination_rules_description2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivIllustration1"
            android:layout_marginTop="5dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/ivIllustration2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescription2"
            android:layout_margin="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvDescription3"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:text="@string/incrimination_rules_description3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivIllustration2"
            android:layout_marginTop="5dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/ivIllustration3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescription3"
            android:layout_margin="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvDescription4"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:text="@string/incrimination_rules_description4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivIllustration3"
            android:layout_marginTop="5dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/ivIllustration4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescription4"
            android:layout_margin="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvDescription5"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:text="@string/incrimination_rules_description5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivIllustration4"
            android:layout_marginTop="5dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/ivIllustration5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescription5"
            android:layout_margin="5dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>